# alenribic.com

./: .gitignore  404.html  CLAUDE.md  README.md  alenribic-site.cabal  bookshelf.markdown  site.hs
.github/workflows/: deploy.yml
css/: default.css
posts/: 2011-08-04-and-we-are-live.markdown  2012-07-08-haskell-an-attempt-at-tic-tac-toe.markdown  2012-08-01-a-journey-into-the-world-of-purely-functional-data-structures.markdown  2012-08-01-hs-task-an-in-code-task-management-utility.markdown  2012-08-06-running-haskell-on-raspberry-pi.markdown  2012-08-17-raspberry-pi-in-a-haskell-cloud.markdown  2012-10-17-speaking-at-upcoming-events.markdown  2012-12-12-server-downtime-back-with-a-cleaner-look.markdown  2013-03-28-compute-product-of-even-numbers.markdown  2025-11-23-einstein-model.markdown
presentations/cloudhaskell2013_ll.js/: index.html
presentations/haskell-lens-talk2013/: index.html
presentations/java-lambda-expressions2013.js/: index.html
templates/: default.html  index.html  postitem.html  posts.html  sitemap.xml
